tests/ui/enum_unknown_variant.stderr
Error [E0304]: `Light` has no variant `Blue`
  --> tests/ui/enum_unknown_variant.lex:6:19
    |
  6 |     val x = Light.Blue;
    |                   ^^^^
 Why: enum literals must name a variant on the type
 Fix: check the variant name
