tests/ui/enum_unknown_variant.lex
enum Light {
    Red;
}

fn main() {
    val x = Light.Blue;
    print(x);
}
